# Rainbow_Road_CGVC

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  ChromaObject.cpp  ChromaObject.h  ControlsHandler.cpp  ControlsHandler.h  CrosshairEffect.h  FrameBuffer.h  GaussianBlurEffect.h  LakituWithSign.h  LaplacianEffect.h  Light.h  LightObject.cpp  LightObject.h  MarioInKart.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  PostProcessEffect.cpp  PostProcessEffect.h  README.md  ScreenQuad.cpp  ScreenQuad.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main  main.cpp  verslag.md  verslage.md
assets/Lakitu/: Lakitu.mtl
includes/: glad.c
includes/glad/: glad.c  glad.h
shaders/: Rainbow_Road_CGVC.code-workspace  basic_fragment_shader.glsl  basic_vertex_shader.glsl  chroma_fragment_shader.glsl  chroma_vertex_shader.glsl  crosshair_fragments_shader.glsl  gaussian_blur_fragment_shader.glsl  laplacian_fragment_shader.glsl  passtrough_fragment_shader.glsl  post_processing_fragment_shader.glsl
track/: BezierCurve.cpp  BezierCurve.h  Track.cpp  Track.h  TrackCurves.h  TrackRenderer.cpp  TrackRenderer.h
